test: add integration tests to flight search endpoint
