# internal/app/server/dto/flight.go
@@ -2,6 +2,6 @@ package dto
 
 import "github.com/danielmesquitta/flight-api/internal/domain/usecase/flight"
 
-type FlightSearchResponse struct {
-	*flight.SearchFlightUseCaseOutput
+type SearchFlightsResponse struct {
+	*flight.SearchFlightsUseCaseOutput
 }
